Minor UI fix/enhancement in login service config.
Make the description of some checkbox options (e.g. 'Restricted')
reflect the checkbox states.

Disable 'Update' button of OAuth2 login service if client ID etc.
missing.

--- a/html/admin/xsvcs.html
+++ b/html/admin/xsvcs.html
@@ -84,7 +84,10 @@
 		<div slot="footer">
 			<button type="button" @click="svc=null">Cancel</button>
 			&nbsp;
-			<button type="button" @click="updateSvcConfig(svc)">Update</button>
+			<button type="button"
+				@click="updateSvcConfig(svc)"
+				:disabled="incompleteSvcConfig"
+			>Update</button>
 		</div>
 	</pl2010-modal> <!--}}}-->
 
