Add 'guest' login support. Prepare for v1.1.
An external login service may be configured to have a 'guest' user,
which is used in case when the email address from the service does
not correspond to a specific WordPress user. Guest user must not have
certain capabilities (e.g. 'edit_posts'), and they cannot access the
dashboard or update their own profile.

--- a/html/admin/xsvcs.html
+++ b/html/admin/xsvcs.html
@@ -42,6 +42,18 @@
 					</span>
 				</td>
 			</tr>
+			<tr>
+				<td>Guest user:</td>
+				<td>
+					<input type="text" v-model="svc.data.guest"
+						placeholder="Guest user for unknown aliases"
+					>
+					<button type="button"
+						@click="checkGuestUser()"
+						:disabled="guestUserNotSpecified"
+					>Check</button>
+				</td>
+			</tr>
 			<template v-if="svc.model=='oauth2'">
 			<tr>
 				<td>Client ID:</td>
